--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
 	<title>Puls2014: Comunidad de personas atractivas y sexy</title>
 </head>
 <body>
-	
+	<header>
+		<figure>
+			
+		</figure>
+	</header>
+	<nav>
+
+	</nav>
+	<section>
+		<article></article>
+	</section>
+	<footer>
+		<p><strong>Powered by Pony</strong></p>
+		<p>mejorando.la 2015</p>
+	</footer>
 </body>
 </html>
