--- a/index.html
+++ b/index.html
@@ -7,15 +7,36 @@
 </head>
 <body>
 	<header>
-		<figure>
-			
+		<figure id="logo">
+			<img src="logo.png">
 		</figure>
+		<h1>Puls2014: Comunidad de personas atractivas y sexy</h1>
+		<figure id="avatar"><img src="avatar.jpg"></figure>
 	</header>
 	<nav>
-
+		<ul>
+			<li><a href="#">Python</a></li>
+			<li><a href="#">HTML5</a></li>
+			<li><a href="#">JavaScript</a></li>
+			<li><a href="#">CSS3</a></li>
+			<li><a href="#">Django</a></li>
+			<li id="publicar_nav">
+				<a href="#">Publicar</a>
+			</li>
+		</ul>
 	</nav>
-	<section>
-		<article></article>
+	<section id="contenido">
+		<article class="item">
+			<figure class="imagen_item">
+				<img src="imagen.jpg" />
+			</figure>
+			<h2 class="titulo_item">
+				<a href="#">
+					Título del artículo
+				</a>
+			</h2>
+			<p></p>
+		</article>
 	</section>
 	<footer>
 		<p><strong>Powered by Pony</strong></p>
