--- a/index.html
+++ b/index.html
@@ -35,7 +35,22 @@
 					Título del artículo
 				</a>
 			</h2>
-			<p></p>
+			<div clase="autor_item">
+				por <a href="#">Joana Munoz</a>
+			</div>
+			<div class="datos_item">
+				<a href="#" class="tag_item">pony</a>
+				<span class="fecha_item">
+					hace <strong>5</strong> min
+				</span>
+				<a href="#" class="comentarios_item">69</a>
+				<a href="#" class="guardar_item"></a>
+			</div>
+			<div class="votacion">
+				<a href="#" class="up"></a>
+				720
+				<a href="#" class="down"></a>
+			</div>
 		</article>
 	</section>
 	<footer>
