Inicio 2da clase

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<header>
 		<figure id="logo">
-			<img src="logo.png">
+			<img src="logo.png"/>
 		</figure>
 		<h1>Puls2014: Comunidad de personas atractivas y sexy</h1>
 		<figure id="avatar"><img src="avatar.jpg"></figure>
@@ -43,13 +43,13 @@
 				<span class="fecha_item">
 					hace <strong>5</strong> min
 				</span>
-				<a href="#" class="comentarios_item">69</a>
-				<a href="#" class="guardar_item"></a>
 			</div>
 			<div class="votacion">
 				<a href="#" class="up"></a>
 				720
 				<a href="#" class="down"></a>
+				<a href="#" class="comentarios_item">69</a>
+				<a href="#" class="guardar_item"></a>
 			</div>
 		</article>
 	</section>
