Finalización del primer paso del proyecto html5 y css3

--- a/index.html
+++ b/index.html
@@ -2,15 +2,18 @@
 <html lang="es">
 <head>
 	<meta charset='utf-8'/>
-	<meta description='Proyecto de la primera generación del 2014 del curso de diseño web online' />
-	<title>Puls2014: Comunidad de personas atractivas y sexy</title>
+	<meta name="description" content='Proyecto de la primera generación del 2014 del curso de diseño web online' />
+	<title>Puls2014: Comunidad de personas atractivas y millonarias</title>
+	<link rel="stylesheet" href="normalize.css" />
+	<link rel="stylesheet" href="estilos.css" />
+
 </head>
 <body>
 	<header>
 		<figure id="logo">
 			<img src="logo.png"/>
 		</figure>
-		<h1>Puls2014: Comunidad de personas atractivas y sexy</h1>
+		<h1>Puls2014: Comunidad de personas atractivas y millonarias</h1>
 		<figure id="avatar"><img src="avatar.jpg"></figure>
 	</header>
 	<nav>
@@ -45,11 +48,115 @@
 				</span>
 			</div>
 			<div class="votacion">
-				<a href="#" class="up"></a>
+				<a href="#" class="up">U</a>
 				720
-				<a href="#" class="down"></a>
+				<a href="#" class="down">D</a>
 				<a href="#" class="comentarios_item">69</a>
-				<a href="#" class="guardar_item"></a>
+				<a href="#" class="guardar_item">X</a>
+			</div>
+		</article>
+				<article class="item">
+			<figure class="imagen_item">
+				<img src="imagen.jpg" />
+			</figure>
+			<h2 class="titulo_item">
+				<a href="#">
+					Probando articulos de diferentes estilos
+				</a>
+			</h2>
+			<div clase="autor_item">
+				por <a href="#">Joana Munoz</a>
+			</div>
+			<div class="datos_item">
+				<a href="#" class="tag_item">pony</a>
+				<span class="fecha_item">
+					hace <strong>5</strong> min
+				</span>
+			</div>
+			<div class="votacion">
+				<a href="#" class="up">U</a>
+				720
+				<a href="#" class="down">D</a>
+				<a href="#" class="comentarios_item">69</a>
+				<a href="#" class="guardar_item">X</a>
+			</div>
+		</article>
+				<article class="item">
+			<figure class="imagen_item">
+				<img src="imagen.jpg" />
+			</figure>
+			<h2 class="titulo_item">
+				<a href="#">
+					Conmemorando la mejor pagina de ensenanza Online
+				</a>
+			</h2>
+			<div clase="autor_item">
+				por <a href="#">Joana Munoz</a>
+			</div>
+			<div class="datos_item">
+				<a href="#" class="tag_item">pony</a>
+				<span class="fecha_item">
+					hace <strong>5</strong> min
+				</span>
+			</div>
+			<div class="votacion">
+				<a href="#" class="up">U</a>
+				720
+				<a href="#" class="down">D</a>
+				<a href="#" class="comentarios_item">69</a>
+				<a href="#" class="guardar_item">X</a>
+			</div>
+		</article>
+				<article class="item">
+			<figure class="imagen_item">
+				<img src="imagen.jpg" />
+			</figure>
+			<h2 class="titulo_item">
+				<a href="#">
+					Este es un titulo pequeno
+				</a>
+			</h2>
+			<div clase="autor_item">
+				por <a href="#">Joana Munoz</a>
+			</div>
+			<div class="datos_item">
+				<a href="#" class="tag_item">pony</a>
+				<span class="fecha_item">
+					hace <strong>5</strong> min
+				</span>
+			</div>
+			<div class="votacion">
+				<a href="#" class="up">U</a>
+				720
+				<a href="#" class="down">D</a>
+				<a href="#" class="comentarios_item">69</a>
+				<a href="#" class="guardar_item">X</a>
+			</div>
+		</article>
+				<article class="item">
+			<figure class="imagen_item">
+				<img src="imagen.jpg" />
+			</figure>
+			<h2 class="titulo_item">
+				<a href="#">
+					Funciona perfectamente todos las ñ y las tíldes
+				</a>
+			</h2>
+			<div clase="autor_item">
+				por <a href="#">Joana Munoz</a>
+			</div>
+			<div class="datos_item">
+				<a href="#" class="tag_item">pony</a>
+				<span class="fecha_item">
+					hace <strong>5</strong> min
+				</span>
+			</div>
+			<div class="votacion">
+				<a href="#" class="up">U</a>
+				720
+				<a href="#" class="down">D</a>
+				<a href="#" class="comentarios_item">69</a>
+				<a href="#" class="guardar_item">X</a>
 			</div>
 		</article>
 	</section>
