--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
 	<meta charset='utf-8'/>
 	<meta name="description" content='Proyecto de la primera generación del 2014 del curso de diseño web online' />
+	<meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1" />
 	<title>Puls2014: Comunidad de personas atractivas y millonarias</title>
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:700,400' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="normalize.css" />
 	<link rel="stylesheet" href="estilos.css" />
-
+	<script type="text/javascript" src="prefixfree.js"></script>
+	<!-- PrefixFree es para no utilizar el webkit en el css -->
 </head>
 <body>
 	<header>
@@ -24,10 +27,17 @@
 			<li><a href="#">CSS3</a></li>
 			<li><a href="#">Django</a></li>
 			<li id="publicar_nav">
-				<a href="#">Publicar</a>
+				<a href="#" class="icon-lapiz">Publicar</a>
 			</li>
 		</ul>
 	</nav>
+	<aside>
+	<video width="320" height="240" autoplay controls>
+  		<source src="lecturas.mp4" type="video/mp4">
+  		<source src="lecturas.ogg" type="video/ogg">
+		"Actualiza tu navegador"
+	</video>
+	</aside>
 	<section id="contenido">
 		<article class="item">
 			<figure class="imagen_item">
@@ -48,20 +58,21 @@
 				</span>
 			</div>
 			<div class="votacion">
-				<a href="#" class="up">U</a>
+				<a href="#" class="up icon-f-arriba"></a>
 				720
-				<a href="#" class="down">D</a>
+				<a href="#" class="down icon-f-abajo"></a>
 				<a href="#" class="comentarios_item">69</a>
-				<a href="#" class="guardar_item">X</a>
+				<a href="#" class="guardar_item icon-estrella"></a>
 			</div>
 		</article>
-				<article class="item">
+
+		<article class="item">
 			<figure class="imagen_item">
 				<img src="imagen.jpg" />
 			</figure>
 			<h2 class="titulo_item">
 				<a href="#">
-					Probando articulos de diferentes estilos
+					Título del artículo
 				</a>
 			</h2>
 			<div clase="autor_item">
@@ -74,20 +85,21 @@
 				</span>
 			</div>
 			<div class="votacion">
-				<a href="#" class="up">U</a>
+				<a href="#" class="up icon-f-arriba"></a>
 				720
-				<a href="#" class="down">D</a>
+				<a href="#" class="down icon-f-abajo"></a>
 				<a href="#" class="comentarios_item">69</a>
-				<a href="#" class="guardar_item">X</a>
+				<a href="#" class="guardar_item icon-estrella"></a>
 			</div>
 		</article>
-				<article class="item">
+		
+		<article class="item">
 			<figure class="imagen_item">
 				<img src="imagen.jpg" />
 			</figure>
 			<h2 class="titulo_item">
 				<a href="#">
-					Conmemorando la mejor pagina de ensenanza Online
+					Título del artículo
 				</a>
 			</h2>
 			<div clase="autor_item">
@@ -100,20 +112,21 @@
 				</span>
 			</div>
 			<div class="votacion">
-				<a href="#" class="up">U</a>
+				<a href="#" class="up icon-f-arriba"></a>
 				720
-				<a href="#" class="down">D</a>
+				<a href="#" class="down icon-f-abajo"></a>
 				<a href="#" class="comentarios_item">69</a>
-				<a href="#" class="guardar_item">X</a>
+				<a href="#" class="guardar_item icon-estrella"></a>
 			</div>
 		</article>
-				<article class="item">
+
+		<article class="item">
 			<figure class="imagen_item">
 				<img src="imagen.jpg" />
 			</figure>
 			<h2 class="titulo_item">
 				<a href="#">
-					Este es un titulo pequeno
+					Título del artículo
 				</a>
 			</h2>
 			<div clase="autor_item">
@@ -126,39 +139,14 @@
 				</span>
 			</div>
 			<div class="votacion">
-				<a href="#" class="up">U</a>
+				<a href="#" class="up icon-f-arriba"></a>
 				720
-				<a href="#" class="down">D</a>
+				<a href="#" class="down icon-f-abajo"></a>
 				<a href="#" class="comentarios_item">69</a>
-				<a href="#" class="guardar_item">X</a>
+				<a href="#" class="guardar_item icon-estrella"></a>
 			</div>
 		</article>
-				<article class="item">
-			<figure class="imagen_item">
-				<img src="imagen.jpg" />
-			</figure>
-			<h2 class="titulo_item">
-				<a href="#">
-					Funciona perfectamente todos las ñ y las tíldes
-				</a>
-			</h2>
-			<div clase="autor_item">
-				por <a href="#">Joana Munoz</a>
-			</div>
-			<div class="datos_item">
-				<a href="#" class="tag_item">pony</a>
-				<span class="fecha_item">
-					hace <strong>5</strong> min
-				</span>
-			</div>
-			<div class="votacion">
-				<a href="#" class="up">U</a>
-				720
-				<a href="#" class="down">D</a>
-				<a href="#" class="comentarios_item">69</a>
-				<a href="#" class="guardar_item">X</a>
-			</div>
-		</article>
+
 	</section>
 	<footer>
 		<p><strong>Powered by Pony</strong></p>
