Actualización antes de JQuery

--- a/index.html
+++ b/index.html
@@ -27,15 +27,20 @@
 			<li><a href="#">CSS3</a></li>
 			<li><a href="#">Django</a></li>
 			<li id="publicar_nav">
-				<a href="#" class="icon-lapiz">Publicar</a>
+				<a href="#" class="icon-lapiz" id="mostrar-form">Publicar</a>
 			</li>
 		</ul>
 	</nav>
+	<form action="" id="formulario" class="formulario">
+		<input type="text" id="titulo" placeholder="Titulo" required>
+		<input type="url" id="url" placeholder="Url" required>
+		<input type="submit" value="Agregar">
+	</form>
 	<aside>
 	<video width="320" height="240" autoplay controls>
   		<source src="lecturas.mp4" type="video/mp4">
   		<source src="lecturas.ogg" type="video/ogg">
-		"Actualiza tu navegador"
+		<!-- "Actualiza tu navegador" -->
 	</video>
 	</aside>
 	<section id="contenido">
@@ -152,5 +157,7 @@
 		<p><strong>Powered by Pony</strong></p>
 		<p>mejorando.la 2015</p>
 	</footer>
+	<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+	<script src="formulario.js"></script>
 </body>
 </html>
