--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 	<meta name="description" content='Proyecto de la primera generación del 2014 del curso de diseño web online' />
 	<meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1" />
 	<title>Puls2014: Comunidad de personas atractivas y millonarias</title>
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans:700,400' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="normalize.css" />
 	<link rel="stylesheet" href="estilos.css" />
-	<script type="text/javascript" src="prefixfree.js"></script>
+
+	<script src="prefixfree.js"></script>
 	<!-- PrefixFree es para no utilizar el webkit en el css -->
 </head>
 <body>
@@ -159,5 +159,11 @@
 	</footer>
 	<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 	<script src="formulario.js"></script>
+	<script>
+		$(function () {
+			// console.log('Ya se disparo el evento DOMContentLoaded');
+			
+		});
+	</script>
 </body>
 </html>
