--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
 	</footer>
 	<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 	<script src="formulario.js"></script>
+	<script src="geo.js"></script>
 	<script>
 		$(function () {
 			// console.log('Ya se disparo el evento DOMContentLoaded');
